sbin_PROGRAMS = primd
primd_SOURCES = dns_abq.c dns_acl.c dns_arc4random.c dns_axfr.c dns_babq.c dns_cache.c dns_config.c dns_control.c dns_data.c dns_engine.c dns_epoll.c dns_external.c dns_file.c dns_forward.c dns_kqueue.c dns_list.c dns_log.c dns_main.c dns_msg.c dns_notify.c dns_pool.c dns_proto.c dns_query.c dns_serverid.c dns_session.c dns_sock.c dns_timer.c dns_util.c
primd_SOURCES += dns.h dns_abq.h dns_acl.h dns_arc4random.h dns_atomic.h dns_axfr.h dns_babq.h dns_cache.h dns_config.h dns_control.h dns_data.h dns_engine.h dns_external.h dns_file.h dns_forward.h dns_list.h dns_log.h dns_msg.h dns_notify.h dns_pool.h dns_proto.h dns_query.h dns_serverid.h dns_session.h dns_sock.h dns_timer.h dns_util.h
